--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,7 +18,7 @@
   </header>
 
   <main class="px-3">
-    <h2>Хочешь прочесть что-то интересно по программированию, но не знаешь что?</h2>
+    <h2>Хочешь прочесть что-то интересное по программированию, но не знаешь что?</h2>
     <p class="lead">Тогда просто жми на кнопку!</p>
     <p class="lead">
       <a href="http://ru.wikipedia.org/wiki/Служебная:RandomInCategory/Программирование" class="btn btn-lg btn-secondary fw-bold border-white bg-black">Рандомная статья</a>
