--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -30,3 +30,14 @@
 </body>
 
 </html>
+
+<style>
+  .px-3{
+    height: 75vh;
+    display: grid;
+    grid-auto-flow: row;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+  }
+</style>
