--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
   <head>
     <title th:text="${title}"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -18,10 +18,10 @@
   </header>
 
   <main class="px-3">
-    <h2>Хочешь прочесть что-то интересное по программированию, но не знаешь что?</h2>
-    <p class="lead">Тогда просто жми на кнопку!</p>
+    <h2>Do you want to read something interesting about programming, but don't know what?</h2>
+    <p class="lead">Then just push the button!</p>
     <p class="lead">
-      <a href="http://ru.wikipedia.org/wiki/Служебная:RandomInCategory/Программирование" class="btn btn-lg btn-secondary fw-bold border-white bg-black">Рандомная статья</a>
+      <a href="http://ru.wikipedia.org/wiki/Служебная:RandomInCategory/Программирование" class="btn btn-lg btn-secondary fw-bold border-white bg-black">Random article</a>
     </p>
   </main>
 
