--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
   <header class="mb-auto">
     <div>
       <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link" href="https://github.com/VitMarKha/RandomArticle">GitHub</a>
+        <a class="nav-link" href="https://github.com/fngoc/RandomArticle">GitHub</a>
       </nav>
     </div>
   </header>
